<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.stanford.cs108.shippingcalculator.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label" />

        <EditText
            android:id="@+id/InputWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_weight="1"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/NextDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NextDay"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/SecondDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SecondDay"/>
        <RadioButton
            android:id="@+id/Standard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Standard"/>
    </RadioGroup>

    <CheckBox
        android:id="@+id/Insurance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Insurance"
        android:checked="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Cost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cost"/>

        <Button
            android:text="@string/CalCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CalCost"
            android:onClick="CalculateCost"/>
    </LinearLayout>

</LinearLayout>
